# fbtc-tax-grinder

./: .flake8  .gitignore  .pylintrc  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: fbtc-2025-grantor-trust-tax-reporting.md  test-coverage-gaps.md
docs/superpowers/plans/: 2026-03-17-fbtc-taxgrinder.md  2026-03-19-project-folder.md  2026-03-23-holding-term-classification.md
docs/superpowers/specs/: 2026-03-17-fbtc-taxgrinder-design.md  2026-03-19-code-review-fixes-design.md  2026-03-19-project-folder-design.md  2026-03-23-holding-term-classification-design.md
fbtc_taxgrinder/: models.py
fbtc_taxgrinder/cli/: commands.py
fbtc_taxgrinder/db/: codec.py  lots.py  proceeds.py  results.py  state.py
fbtc_taxgrinder/engine/: compute.py  matching.py
fbtc_taxgrinder/export/: csv_export.py
fbtc_taxgrinder/parsers/: etrade.py  fidelity_pdf.py
tests/: .pylintrc  conftest.py  test_cli.py  test_codec.py  test_compute.py  test_conf.py  test_csv_export.py  test_db.py  test_etrade_parser.py  test_fidelity_parser.py  test_matching.py  test_models.py  test_proration.py  test_sells.py  test_validation.py
