[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fbtc-taxgrinder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pdfplumber>=0.10",
    "requests>=2.31",
]

[project.scripts]
fbtc-taxgrinder = "fbtc_taxgrinder.cli.commands:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
